--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,24 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+ja:
+  enums:
+    order:
+      payment_method:
+        credit_card: "クレジットカード"
+        transfer: "銀行振込"
+      trade_status:
+        waiting: "入金待ち"
+        confirmed: "入金確認"
+        making: "製作中"
+        preparing: "発送準備中"
+        shipped: "発送済み"
+    order_item:
+      making_status:
+        impossible: "着手不可"
+        waiting: "製作待ち"
+        making: "製作中"
+        finished: "製作完了"
   date:
     abbr_day_names:
     - 日
